link naar introductiepage

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </div>
     <h2>Welcome</h2>
     <p>Touch the button to continue</p>
-    <a href="">Next</a>
+    <a href="introduction.html">Next</a>
 </body>
 </html>
