introduction page uitgewerkt

--- a/introduction.html
+++ b/introduction.html
@@ -7,9 +7,21 @@
     <title>Introduction</title>
 </head>
 <body>
-    <header>
+    <div class="title_bar">
         <img src="img/logo.png" alt="Logo">
         <h1>Zaanse Schans Guesser</h1>
+    </div>
+    <header>
+        <h2>A quick introduction</h2>
     </header>
+    <main>
+        <p>
+            In this multiple choice quiz you will see an image, on this image is a building that can be found on the
+            Zaanse Schans, based on what you see in the image you have to guess which building it is. No worries, there
+            is no time limit, so you can think about it. At the end you can see what your score is and save it under
+            your name. Have fun guessing!
+        </p>
+    </main>
+    <a href="question-1.html" class="bottom">Start</a>
 </body>
 </html>
