next knop eeen class gegeven

--- a/question-1.html
+++ b/question-1.html
@@ -50,7 +50,7 @@
         </label>
         
     </form>
-    <a href="">Next</a>
+    <a href="" class="Q-next">Next</a>
     <script src="js/modal.js"></script>
 </body>
 
