logo onderaan toegevoegd

--- a/question-1.html
+++ b/question-1.html
@@ -51,6 +51,9 @@
         
     </form>
     <a href="" class="Q-next">Next</a>
+    <div class="logo-bottom">
+        <img src="img/logo.png" alt="Logo Zaanse Schans Guesser">
+    </div>
     <script src="js/modal.js"></script>
 </body>
 
