--- a/question-1.html
+++ b/question-1.html
@@ -50,7 +50,7 @@
         </label>
         
     </form>
-    <a href="" class="Q-next">Next</a>
+    <a href="question-2.html" class="Q-next">Next</a>
     <div class="logo-bottom">
         <img src="img/logo.png" alt="Logo Zaanse Schans Guesser">
     </div>
