--- a/question-3.html
+++ b/question-3.html
@@ -50,7 +50,7 @@
         </label>
 
     </form>
-    <a href="question-3.html" class="Q-next">Next</a>
+    <a href="results.html" class="Q-next">Next</a>
     <div class="logo-bottom">
         <img src="img/logo.png" alt="Logo Zaanse Schans Guesser">
     </div>
