update titles / links

--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/intro.css">
-    <title>Introduction</title>
+    <title>Results</title>
 </head>
 <body>
     <div class="title_bar">
@@ -19,7 +19,7 @@
         <p id="result"></p>
         <p>Questions right!</p>
     </main>
-    <a href="question-1.html" class="bottom">Save my score</a>
+    <a href="save.html" class="bottom">Save my score</a>
     <script>
         let resultContainer = document.getElementById('result');
         let result = Math.floor((Math.random() * 3) +1);
