--- a/question-3.html
+++ b/question-3.html
@@ -12,6 +12,7 @@
 <body>
     <div class="image-holder">
         <img src="img/gekroonde-poelenburg.jpg" alt="cheesemaker">
+        <h1 class="magnifier">&#x1F50D;</h1>
     </div>
     <div class="hint">
         <img src="img/gekroonde-poelenburg.jpg" alt="">
