--- a/question-1.html
+++ b/question-1.html
@@ -12,6 +12,7 @@
 <body>
     <div class="image-holder">
         <img src="img/Zaanse-Schans-clog-workshop.jpg" alt="cheesemaker">
+        <h1 class="magnifier">&#x1F50D;</h1>
     </div>
     <div class="hint">
         <img src="img/Zaanse-Schans-clog-workshop.jpg" alt="">
