--- a/results.html
+++ b/results.html
@@ -11,14 +11,17 @@
         <img src="img/logo.png" alt="Logo">
         <h1>Zaanse Schans Guesser</h1>
     </div>
-    <header>
-        <h2>Your Results:</h2>
-    </header>
-    <main>
-        <p>You got</p>
-        <p id="result"></p>
-        <p>Questions right!</p>
-    </main>
+    <div class="vlak">
+        <header>
+            <h2>Your Results:</h2>
+        </header>
+        <main>
+            
+                <p>You got</p>
+                <p id="result"></p>
+                <p>Questions right!</p>
+        </main>
+    </div>
     <a href="save.html" class="bottom">Save my score</a>
     <script>
         let resultContainer = document.getElementById('result');
