--- a/save.html
+++ b/save.html
@@ -9,14 +9,11 @@
 <body>
     <div class="title_bar">
         <img src="img/logo.png" alt="Logo">
-        <h1>Zaanse Schans Guesser</h1>
+        <h1>Enter your name</h1>
     </div>
-    <header>
-        <h2>Enter your name:</h2>
-    </header>
     <main>
        <input type="text" name="Naam" placeholder="Example: John Doe">
     </main>
-    <a href="index.html" class="bottom">Save Score</a>
+    <a href="index.html" class="save">Save Score</a>
 </body>
 </html>
